# animated-couscous

./: Cargo.toml  README.md  go.mod
auction/: auction.go  auction_test.go
brokenkeyboard/: brokenkeyboard.go  brokenkeyboard_test.go
heightcmp/: heightcmp.go  heightcmp_test.go
janken/: janken.go  janken_test.go
nationtax/: nationtax.go  nationtax_test.go
niceshopping/: niceshopping.go  niceshopping_test.go
orangecategory/: orangecategory.go  orangecategory_test.go
peaceplace/: peaceplace.go  peaceplace_test.go
rabbitcarrot/: rabbitcarrot.go  rabbitcarrot_test.go
righttriangle/: righttriangle.go
rpgshopping/: rpgshopping.go  rpgshopping_test.go
salegraph/: salegraph.go  salegraph_test.go
secretletter/: secretletter.go  secretletter_test.go
shabon/: shabon.go  shabon_test.go
speedviolation/: speedviolation.go  speedviolation_test.go
src/: auction.rs  ball_box.rs  broken_keyboard.rs  dislike_number.rs  fan_crypt.rs  find_top.rs  gray_scale.rs  height_cmp.rs  janken.rs  lib.rs  mst_evl.rs  nation_tax.rs  net_surf.rs  nice_shopping.rs  orange_category.rs  peace_place.rs  rabbit_carrot.rs  rabbit_turtle.rs  right_triangle.rs  rpg_shopping.rs  sale_graph.rs  secret_letter.rs  shabon.rs  speed_violation.rs  struck_out.rs  sushi_melon.rs
src/ancient_formula/: ancient_formula.rs  mod.rs
src/black_phone/: black_phone.rs  mod.rs
src/choco_split/: choco.rs  mod.rs
src/deco_string/: deco_string.rs  mod.rs
src/handle_name/: handle_name.rs  mod.rs
src/super_market/: mod.rs  super_market.rs
sushimelon/: sushimelon.go  sushimelon_test.go
(+2 files in other folders)
