[package]
name = "animated-couscous"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.41"
# rust_decimal = "1.14.3"
# rust_decimal_macros = "1.14.3"
